# src/swagger.json
@@ -13,18 +13,26 @@
 						"type": "number",
 						"format": "double"
 					},
-					"name": {
+					"username": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"username"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UpdateUserRequest": {
+				"properties": {
+					"username": {
 						"type": "string"
 					},
 					"email": {
 						"type": "string"
 					}
 				},
-				"required": [
-					"id",
-					"name",
-					"email"
-				],
 				"type": "object",
 				"additionalProperties": false
 			}
@@ -40,6 +48,50 @@
 		"contact": {}
 	},
 	"paths": {
+		"/users": {
+			"get": {
+				"operationId": "GetUsers",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/User"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "offset",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/users/{userId}": {
 			"get": {
 				"operationId": "GetUser",
@@ -70,21 +122,24 @@
 						}
 					}
 				]
-			}
-		},
-		"/users": {
-			"get": {
-				"operationId": "GetUsers",
+			},
+			"patch": {
+				"operationId": "UpdateUser",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/User"
+									"properties": {
+										"message": {
+											"type": "string"
+										}
 									},
-									"type": "array"
+									"required": [
+										"message"
+									],
+									"type": "object"
 								}
 							}
 						}
@@ -94,7 +149,27 @@
 					"User"
 				],
 				"security": [],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateUserRequest"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
